@@ -62,9 +62,6 @@
 
   NEEDS PATCH
 
-    o  parameters should be omitted (not NULL) with id-dsa-with-sha1 OID
-       in X.509 signatures
-
     o  inappropriate AlgorithmIdentifier used in S/MIME signatures
        (key type instead of signature algorithm)
 
